# alsbts-experiments

./: .gitignore  Kpwork_f.m  LICENSE  RBF_Brownean_GP_regression.py  README.md  STmodel.slx  STmodel.slxc  STmodel_gui.slx  example_interfaces.py  gp_error_reproduction.py  init_STsetup.m  pyproject.toml  run.py  rvs_generation.py  test_dev_gp_kf copy.py  test_dev_gp_kf.py  test_time_accummulation.py  test_uniform_variance.py  vis_brownean_concept_drift.py
 gausian_mean_prior/: gausian_test.py
brown/: LP_H_2Erw_2Ki_wkB_mB_15-21_03_21_1.csv  brown_int_kernel.py  brown_kernel.py  daten_read_in.py
component_visualsation/: utils.py  vis_brown_distinction.py  vis_change_detector.py  vis_rvs_estimator.py  vis_rvs_estimator_concept_drift.py
post_experiment_computation/: calculate_rmse_one_run.py  calculate_rmse_over__brown_est_int_brown_var_sel_std.py  calculate_rmse_over__brown_exp_var_stdsel.py  calculate_rmse_over__change_exp_var_miss.py  calculate_rmse_over__change_exp_var_offset.py  calculate_rmse_over__change_exp_var_wrong.py  calculate_rmse_over__fixed_intervals_var_int.py  calculate_rmse_over__int_brown_exp_var_stdsel.py  calculate_rmse_over__learn_brown_exp_var_stdsel.py  calculate_rmse_over__rbf_exp_var_stdsel.py  calculate_rmse_over__rbf_stdsel_exp_var_brown.py  calculate_rmse_over__wint_brown_exp_var_stdsel.py  calculate_rmse_over_detect_offset.py  calculate_rmse_over_meas_inter.py  calculate_rmse_over_miss.py  calculate_rmse_over_miss_vs_baseline.py  calculate_rmse_over_wrong_detection.py  plot_active_power.py  plot_all.py  plot_all__int_brown_est_brown_var_int_stdsel.py  plot_all__int_brown_exp_var_int_stdsel.py  plot_all__int_sel_fixed_intervals_var_int_int.py  plot_all__var_int_int.py  plot_all__wint_brown_var_wint_sdtsel.py  plot_all_paper.py  plot_all_paper_scatter.py  plot_cor_stdsel_rmse_paper.py  plot_data.py  plot_gain.py  plot_gain_paper.py  plot_load_profile.py  plot_meas_over_time_stdsel_paper.py  plot_measure_pos__brown_exp_var_stdsel.py  plot_measure_pos__rbf_exp_var_stdsel.py  plot_real_paper_scatter.py  plot_seperate_runs__behavior_change.py  (+16 more)
(+28 files in other folders)
