[tool.poetry]
name = "alsbts-experiments"
version = "0.3.0"
description = "Experiments and visualisations for alsbts"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "alsbts/experiments", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
#alsbts-modules = { path = "/home/bela/Cloud/code/Git/alsbts-modules", develop = true }
alsbts-modules = {git = "https://github.com/bela127/alsbts-modules.git"}
paramz = {git = "https://github.com/bela127/paramz.git"}
GPy = {git = "https://github.com/bela127/GPy.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
